--- a/robsRings.css
+++ b/robsRings.css
@@ -12,7 +12,7 @@
 
 .modal-content {
     width: 500px;
-    height: 300px;
+    height: 350px;
     background-color: white;
     text-align: center;
     border-radius: 4px;
@@ -33,10 +33,8 @@ input {
     transform: rotate(45deg);
 }
 
-.add__type {
-    display: inline;
-}
-
+.add__type,
 .add__value {
     display: inline;
 }
+
