--- a/robsRings.css
+++ b/robsRings.css
@@ -38,3 +38,17 @@ input {
     display: inline;
 }
 
+.edit_btn {
+    justify-content: right;
+    align-items: right;
+    position: absolute;
+    margin-left: 50px;
+    background:none!important;
+    color:inherit;
+    border:none; 
+    padding:0!important;
+    font: inherit;
+    border-bottom:1px solid #444; 
+    cursor: pointer;
+}
+
